--- a/components/Portfolio.module.css
+++ b/components/Portfolio.module.css
@@ -32,8 +32,8 @@
 }
 
 .skill {
-    width: 3.2em;
-    height: 3.2em;
+    width: 2.7em;
+    height: 2.7em;
     position: absolute;
     top: 50%;
     left: 50%;
